# the-queue

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
client/: .eslintrc.json  .stylelintrc.json  Dockerfile  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  App.test.js  Header.css  Header.js  Modal.css  Modal.js  NewProjectForm.js  Project.css  Project.js  index.css  index.js
client/src/components/: App.js  Column.js  EditProjectForm.js  Header.js  Modal.js  NewProjectForm.js  Project.js  buttons.css
client/src/styles/: App.css  Column.css  Header.css  Modal.css  NewProjectForm.css  Project.css  buttons.css  colors.css  index.css
migrations/2018-09-19-191643_create_requests/: up.sql
migrations/2018-10-02-235451_add_attributes_to_projects/: down.sql  up.sql
migrations/2018-10-15-141132_seedfile/: up.sql
migrations/2018-10-18-144956_updated_at_column_function/: down.sql  up.sql
migrations/2018-10-18-152414_trigger_projects_update/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
