[package]
name = "the-queue"
version = "0.1.0"
authors = ["Erica Wright <ericaewright@gmail.com>"]

[dependencies]
rouille = "2.*"
reqwest = "0.8.8"
router= "*"
postgres = { version = "0.15.2", default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
diesel = { version = "^1.1.0", features = ["postgres"] }
dotenv = "0.9.0"