[package]
name = "the-queue"
version = "0.1.0"
authors = ["Erica Wright <ericaewright@gmail.com>"]

[dependencies]
rouille = "2.2.0"
reqwest = "0.8.8"
router= "0.6.0"
postgres = { version = "0.15.2", default-features = false }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
chrono = { version= "0.4.6", features = ["serde"] }